--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
 hello world
-
+<html> 
+	<head>
+	<title>THIS IS A TITLE</title>
+	</head>
+	<body>
+		<div>
+		<h1>hello world</h1>h1>
+		</div>
+		<div>
+		hello world
+		</div>
+		<a href="http://google.com">click here if you dare</a>
+		<img src="https://upload.wikimedia.org/wikipedia/en/e/ec/Bowser_-_New_Super_Mario_Bros_2.png">
+	</body>
+</html>
