--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 hello world
 <html> 
 	<head>
-	<title>THIS IS A TITLE</title>
+	<title>Kylen Bao</title>
 	</head>
 	<body>
 		<div>
-		<h1>hello world</h1>
-		</div>
-		<div>
-		hello world
+		<h1>Hey guys! Welcome to my website.</h1>
 		</div>
 	</body>
 </html>
