--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-hello world
 <html> 
 	<head>
 	<title>Kylen Bao</title>
 	</head>
 	<body>
 		<div>
-		<h1>Hey guys! Welcome to my website.</h1>
+		<h1>Hey guys! Welcome to my website. Here are a few of my favorite links: </h1>
 		</div>
+		<a href="http://google.com">1</a>
+		
 	</body>
 </html>
