--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<div>
 		<h1>Hey guys! Welcome to my website. Here are a few of my favorite links: </h1>
 		</div>
-		<a href="http://google.com">1</a>
+		<a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjwE4_ixzXdn2NQTZx5T67VvDGdYyZXa27FdLTPa-pzcgrTRSJ">1</a>
 		
 	</body>
 </html>
