--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 		<div>
-		<h1>Hey guys! Welcome to my website. Here are a few of my favorite links: </h1>
+		<h1>Hey guys! Welcome to my website. Here are a few of my favorite memes: </h1>
 		</div>
 		<img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjwE4_ixzXdn2NQTZx5T67VvDGdYyZXa27FdLTPa-pzcgrTRSJ">
 		
