--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html> 
 	<head>
-	<title>Kylen Bao</title>
+	<body style="background-color:powderblue;">
+	<title>Memes</title>
 	</head>
 	<body>
 		<div>
