--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<h2>Here is the link to </h2>
 		<a href="http://yahoo.com">Google.</a>
 		<h2>Just kidding, here's the actual </h2>
-		<a href="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwidvP6z1pPXAhVpxYMKHZupAUEQjBwIBA&url=http%3A%2F%2Fi0.kym-cdn.com%2Fentries%2Ficons%2Foriginal%2F000%2F016%2F212%2Fmanning.png&psig=AOvVaw0pqxVnv1kzdIN0lJ8M-9em&ust=1509292381570365">link.</a>
+		<a href="http://i0.kym-cdn.com/entries/icons/original/000/016/212/manning.png">link.</a>
 		<h1>Instead of making a bio about myself, I decided to document a list of a much more pressing, prevalent issue: Top 10 Anime Betrayals of All Time.</h1>
 		<ul>
 		 	<li>1. </li>
