--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h1>Instead of making a bio about myself, I decided to document a list of the Top 3 Anime Betrayals of All Time.</h1>
 		<ol>
 		 	<li><a href="http://i0.kym-cdn.com/photos/images/original/001/146/795/529.png">Sanders</a></li>
-  			<li><a hre"http://vignette4.wikia.nocookie.net/le-miiverse-resource/images/a/a7/Top_10_anime_betrayal_ted_cruz.png/revision/latest?cb=20160407203713">Cruz</a> </li>
+  			<li><a href="http://vignette4.wikia.nocookie.net/le-miiverse-resource/images/a/a7/Top_10_anime_betrayal_ted_cruz.png/revision/latest?cb=20160407203713">Cruz</a> </li>
   			<li>3. </li>
 			</ol>
 		</body>
