--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 		<a href="http://yahoo.com">Google.</a>
 		<h2>Just kidding, here's the actual </h2>
 		<a href="http://i0.kym-cdn.com/entries/icons/original/000/016/212/manning.png">link.</a>
-		<h1>Instead of making a bio about myself, I decided to document a list of the Top 3 Anime Betrayals of All Time.</h1>
+		<center><h1>Instead of making a bio about myself, I decided to document a list of the Top 3 Anime Betrayals of All Time.</h1></center>
 		<ol>
 		 	<li><a href="http://i0.kym-cdn.com/photos/images/original/001/146/795/529.png">Sanders</a></li>
   			<li><a href="http://vignette4.wikia.nocookie.net/le-miiverse-resource/images/a/a7/Top_10_anime_betrayal_ted_cruz.png/revision/latest?cb=20160407203713">Cruz</a> </li>
   			<li><a href="https://i.pinimg.com/originals/da/68/76/da6876c35d87c7c4288165c14535afaa.jpg">park</a></li>
+			<li><img src="https://i.imgur.com/ELmzlg2.gif"></li>
 			</ol>
 		</body>
 </html>
